--- a/src/css/3-elements/_base.scss
+++ b/src/css/3-elements/_base.scss
@@ -7,6 +7,12 @@ body {
   color: white;
   line-height: 1.5;
   font-family: $font-body;
+
+  @if $visual-grid == true {
+    &::before {
+      z-index: 999;
+    }
+  }
 }
 
 a {
