--- a/src/css/5-components/_left-behind.scss
+++ b/src/css/5-components/_left-behind.scss
@@ -72,7 +72,7 @@
     }
 
     &__image {
-      @include trbl(null, ((flex-grid(1) + flex-gutter()) * -1), (map-get($margins, 'typography') * -1), null);
+      @include trbl(null, ((flex-grid(1, 12) + (flex-gutter() * (14 / 12))) * -1), (map-get($margins, 'typography') * -1), null);
 
       position: absolute;
       width: 40%;
@@ -104,6 +104,10 @@
 
     &__content-2 {
       @include span-columns(7);
+    }
+
+    &__image {
+      right: ((flex-grid(1, 7) + (flex-gutter() * (14 / 7))) * -1);
     }
 
     &__content-3 {
